<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:textColorHint="@color/yellowText"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:counterTextColor="@color/yellowText"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/AppTheme.TextErrorAppearance"
            app:errorTextColor="@color/almostWhite"
            app:hintTextAppearance="@style/AppTheme.TextFloatLabelAppearance"
            app:layout_constraintBottom_toTopOf="@id/spnPronoun"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/settings_txtName_hint"
                android:inputType="textPersonName"
                android:maxLength="25"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:theme="@style/EditTextCursor"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spnPronoun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:contentDescription="@string/settings_spnPronoun"
            android:foreground="@drawable/borda_clara"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSalvar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/custom_button"
            android:text="@string/save"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/btnImportOriginal"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnImportOriginal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/custom_button"
            android:text="@string/btnImportOriginal"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/btnZerar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnZerar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/custom_button"
            android:text="@string/settings_btnZerar"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>